--- a/escolaJAC/siteMain/templates/post.html
+++ b/escolaJAC/siteMain/templates/post.html
@@ -21,7 +21,7 @@
         <h1 class="article-title mt-3">{{ post.title }}</h1>
 
         {% if post.image_file %}
-        <img class="img-fluid rounded-3 my-3" src="{{ post.image_file }}">
+        <img class="img-fluid rounded-3 my-3" src="{{ url_for('static', filename='post_pics/' + post.image_file) }}">
         {% endif %}
 
         <p class="article-content">{{ post.content }}</p>
