--- a/escolaJAC/siteMain/templates/account.html
+++ b/escolaJAC/siteMain/templates/account.html
@@ -2,7 +2,7 @@
 {% block content %}
 <div class="content-section">
     <div class="media d-flex align-items-center mb-4">
-        <img class="rounded-circle account-img" src="{{ image_file }}">
+        <img class="rounded-circle account-img" src="{{ current_user.image_file }}">
         <div class="media-body ms-3">
             <h2 class="account-heading">{{ current_user.username }}</h2>
             <p class="text-secondary mb-0">{{ current_user.email }}</p>
