--- a/escolaJAC/siteMain/templates/post.html
+++ b/escolaJAC/siteMain/templates/post.html
@@ -3,7 +3,7 @@
 
 <article class="media content-section">
     <img class="rounded-circle article-img"
-        src="{{ url_for('static', filename='profile_pics/' + post.author.image_file) }}">
+        src="{{ post.author.image_file }}">
     <div class="media-body">
         <div class="article-metadata d-flex justify-content-between align-items-center flex-wrap">
             <div>
