--- a/escolaJAC/siteMain/templates/about.html
+++ b/escolaJAC/siteMain/templates/about.html
@@ -9,7 +9,7 @@
             class="text-success fw-bold">Emídio</a>.</p>
 
     <div class="mt-3">
-        <a href="https://github.com/emid1-o" target="_blank" title="Visitar GitHub">
+        <a href="https://github.com/emid1-o/Projeto-Escola" target="_blank" title="Visitar GitHub">
             <i class="bi bi-github" style="font-size: 2rem; color: black;"></i>
         </a>
     </div>
