--- a/escolaJAC/siteMain/templates/post.html
+++ b/escolaJAC/siteMain/templates/post.html
@@ -12,7 +12,7 @@
             </div>
             {% if post.author == current_user %}
             <div class="mt-2 mt-md-0">
-                <a class="btn btn-info btn-sm" href="{{ url_for('posts.update_post', post_id=post.id) }}">Atualizar</a>
+                <a class="btn btn-success btn-sm" href="{{ url_for('posts.update_post', post_id=post.id) }}">Atualizar</a>
                 <button type="button" class="btn btn-danger btn-sm" data-bs-toggle="modal"
                     data-bs-target="#deleteModal">Deletar</button>
             </div>
